# chat-candle

./: .gitignore  Cargo.toml  README.md
examples/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/web/src/: App.tsx  worker.ts
src/: builder.rs  client.rs  lib.rs  loader.rs  main.rs  wasm.rs
src/api/: completion.rs  stream.rs
src/api/types/: error.rs
src/engine/: cache.rs  constraint.rs  generate.rs  metal_kernels.rs  model.rs  sampler.rs
src/parsers/: json.rs
web/: index.html
