[package]
name = "chat-candle"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Local-inference chat-rs provider (and CLI) for Qwen3 / Llama / MiniCPM-family models via candle, on CPU / Metal / CUDA."

[lib]
name = "chat_candle"
path = "src/lib.rs"

[[bin]]
name = "chat-candle"
path = "src/main.rs"

[dependencies]
# Inference backend: candle owns the Metal/CUDA/CPU kernels; the engine composes them.
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"

tokenizers = "0.22"
hf-hub = "0.4"

chat-core = { version = "0.4.2", features = ["stream"] }
tools-rs = "0.3"
async-trait = "0.1"
schemars = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
minijinja = "2"

async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["stream"]
stream = ["chat-core/stream", "dep:async-stream", "dep:futures"]

# Pick a GPU backend at build time, e.g. `cargo run --features metal`.
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[profile.release]
opt-level = 3
lto = "thin"
