[package]
name = "chat-candle"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Local-inference chat-rs provider (and CLI) for Qwen3 / Llama / MiniCPM-family models via candle, on CPU / Metal / CUDA / wasm."

[lib]
name = "chat_candle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chat-candle"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Always available (wasm-safe): the inference engine + parsing/templating.
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
minijinja = "2"

# Native provider stack (chat-rs) — optional so the wasm build can drop it.
chat-core = { version = "0.4.2", features = ["stream"], optional = true }
tools-rs = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
schemars = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "macros", "sync"], optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
hf-hub = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["native"]
native = ["provider", "cli"]
# chat-rs provider: CompletionProvider/StreamProvider over the engine.
provider = [
    "loader-hf",
    "dep:chat-core",
    "dep:tools-rs",
    "dep:async-trait",
    "dep:schemars",
    "dep:tokio",
    "dep:async-stream",
    "dep:futures",
]
# HF-hub weight loader (native filesystem/HTTP).
loader-hf = ["dep:hf-hub"]
# The standalone CLI binary.
cli = ["dep:clap", "loader-hf"]

metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[profile.release]
opt-level = 3
lto = "thin"
